<resources>
    <string name="app_name">HeroAdmin</string>
    <string name="button_coming_events_text">COMING</string>
    <string name="button_past_events_text">PAST</string>
    <string name="venue_spinner_text">VENUE</string>
    <string name="main_activity_event_list_text">No events to show</string>
    <string name="eventDate">28/03 - 22</string>
    <string name="eventVenue">Stockholm</string>
    <string name="eventStartTime">13:00</string>
    <string name="eventParticipants">42 / 72 players</string>

    <string-array name="venues">
        <item>Göteborg</item>
        <item>Malmö</item>
        <item>Stockholm</item>
        <item>Uppsala</item>
        <item>Visby</item>
        <item>Örebro</item>
    </string-array>

    <string-array name="groupNames">
        <item>Grip</item>
        <item>Drake</item>
        <item>Enhörning</item>
        <item>Kraken</item>
        <item>Chimaera</item>
        <item>Mantikora</item>
        <item>Tomte</item>
        <item>Skogsrå</item>
        <item>Fenix</item>
        <item>Sphinx</item>
        <item>Wendigo</item>
        <item>Bortbyting</item>
        <item>Draug</item>
        <item>Gast</item>
        <item>Irrbloss</item>
        <item>Grimm</item>
        <item>Lindorm</item>
        <item>Lyktgubbe</item>
        <item>Mara</item>
        <item>Myling</item>
        <item>Oknytt</item>
        <item>Vätte</item>
        <item>Älva</item>
        <item>Odjur</item>
        <item>Nosferatu</item>
        <item>Tengu</item>
        <item>Yokai</item>
        <item>Balrog</item>
        <item>Dementor</item>
        <item>Nifflare</item>
        <item>Fantom</item>
        <item>Frankenstein</item>
        <item>Fenris</item>
        <item>Siren</item>
        <item>Poltergeist</item>
        <item>Cyklop</item>
        <item>Titan</item>
        <item>Grådvärg</item>
        <item>Kobold</item>
        <item>Basilisk</item>
        <item>Dryad</item>
        <item>Faun</item>
        <item>Golem</item>
        <item>Hydra</item>
        <item>Kappa</item>
        <item>Kentaur</item>
        <item>Krampus</item>
        <item>Åskfågel</item>
        <item>Naga</item>
        <item>Salamander</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
