<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginRight="15dp"
        android:layout_weight="1.5"
        android:background="#F8E9D0"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/venueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/eventVenue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/eventDate"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/eventStartTime"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/participantAmountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/eventParticipants"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/historyButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:text="History"
            android:textColor="#000000"
            app:strokeColor="#000000"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/endEventButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:text="End Event"
            android:textColor="#000000"
            app:strokeColor="#000000"
            app:strokeWidth="2dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <Button
            android:id="@+id/newRoundButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:text="New Round"
            android:textColor="#000000"
            app:strokeColor="#000000"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/rerollTeamButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:text="Reroll Team"
            android:textColor="#000000"
            app:strokeColor="#000000"
            app:strokeWidth="2dp" />
    </LinearLayout>

</LinearLayout>